feat: Rocky Talky Phase 1 — schema, strip auth, session CRUD backend
Co-authored-by: Aklaran <botbunk@gmail.com>

--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@basecamp/frontend",
+  "name": "@rocky-talky/frontend",
   "version": "0.0.0",
   "private": true,
   "type": "module",
