--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basecamp",
+  "name": "rocky-talky",
   "version": "0.0.0",
   "private": true,
   "description": "Full-stack AI-native template app. Clone, rename, build.",
