--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -16,6 +16,8 @@
     "seed": "tsx prisma/seed/seed.ts"
   },
   "dependencies": {
+    "@mariozechner/pi-ai": "^0.52.7",
+    "@mariozechner/pi-coding-agent": "^0.52.7",
     "@prisma/client": "6.19.2",
     "@trpc/server": "^11.0.0",
     "argon2": "^0.44.0",
