--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -7,7 +7,9 @@
     "clean": "rm -rf dist",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -38,10 +40,16 @@
   "devDependencies": {
     "@tanstack/router-devtools": "^1.114.0",
     "@tanstack/router-vite-plugin": "^1.114.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "@vitest/ui": "^4.0.18",
     "autoprefixer": "^10.4.0",
+    "happy-dom": "^20.5.0",
+    "jsdom": "^28.0.0",
     "postcss": "^8.5.0",
     "tailwindcss": "^3.4.0",
     "vite": "^6.2.0"
