fix: use copytruncate instead of postrotate restart for log rotation
postrotate was restarting the rocky-talky service to reopen log files,
which kills active Pi agent sessions. copytruncate avoids this by
truncating the file in-place — the service keeps writing to the same
file descriptor.

Co-authored-by: Aklaran <Aklaran@users.noreply.github.com>

--- a/scripts/logrotate.conf
+++ b/scripts/logrotate.conf
@@ -31,12 +31,8 @@ $HOME/.local/state/rocky-talky/rocky-talky.log {
     # Don't mail logs to anyone
     nomail
     
-    # Create new log file with same permissions
-    create 0644
-    
-    # Run after rotation to tell systemd service to reopen log file
-    postrotate
-        # Signal the service to reopen log files if it's running
-        systemctl --user is-active rocky-talky.service > /dev/null 2>&1 && systemctl --user restart rocky-talky.service > /dev/null 2>&1 || true
-    endscript
+    # Truncate the original file in-place after creating a copy.
+    # This avoids restarting the service (which kills active sessions).
+    # The service keeps its file handle and writes to the now-empty file.
+    copytruncate
 }
